fix + new button color in dark mode

--- a/assets/dev/scss/editor/panel/_elements.scss
+++ b/assets/dev/scss/editor/panel/_elements.scss
@@ -525,7 +525,7 @@
 	padding: 4px 10px;
 	border: none;
 	background: none;
-	color: $e-pink-900;
+	color: var(--e-a-color-primary-bold-dark);
 	font-size: 13px;
 	font-weight: 500;
 	cursor: pointer;
